fix: align icon and add hover
ref #2856

--- a/visualization/app/codeCharta/ui/actionIcon/actionIcon.component.scss
+++ b/visualization/app/codeCharta/ui/actionIcon/actionIcon.component.scss
@@ -1,7 +1,8 @@
 @use "../../../material/theme";
 
 cc-action-icon {
-	display: inline-block;
+	display: inline-flex;
+	align-items: center;
 	cursor: pointer;
 	width: 24px;
 	height: 24px;
@@ -16,7 +17,6 @@ cc-action-icon {
 	i,
 	i.fa {
 		margin: auto;
-		box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 		line-height: 1.5;
 		color: white;
 	}
